<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.auth.login.LoginFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageView
           android:id="@+id/l_iv_logo"
           android:layout_width="@dimen/image_view_category"
           android:layout_height="@dimen/image_view_category"
           android:src="@drawable/logo"
           android:layout_marginTop="?actionBarSize"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           tools:ignore="ContentDescription" />

       <TextView
           android:id="@+id/l_tv_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/title_login"
           android:layout_marginTop="@dimen/margin_component_extra"
           android:textAppearance="@style/TextAppearance.Kelilink.Heading6"
           app:layout_constraintTop_toBottomOf="@+id/l_iv_logo" />

       <TextView
           android:id="@+id/l_tv_content"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_marginTop="@dimen/margin_component_more"
           android:text="@string/content_login"
           android:textAppearance="@style/TextAppearance.Kelilink.Body2"
           app:layout_constraintTop_toBottomOf="@+id/l_tv_title" />

       <com.example.kelilink.util.costum_view.KelilinkEditText
           android:id="@+id/l_et_email"
           android:textAppearance="@style/TextAppearance.Kelilink.Body1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/height_text_input"
           android:layout_marginTop="@dimen/margin_layout_more"
           android:layout_marginHorizontal="@dimen/margin_layout"
           android:hint="@string/hint_email"
           android:inputType="textEmailAddress"
           android:paddingHorizontal="@dimen/margin_component_more"
           app:layout_constraintTop_toBottomOf="@+id/l_tv_content"
           tools:ignore="TextContrastCheck"/>

       <com.example.kelilink.util.costum_view.KelilinkEditText
           android:id="@+id/l_et_password"
           android:layout_width="match_parent"
           android:layout_height="@dimen/height_text_input"
           android:layout_marginTop="@dimen/margin_component_extra"
           android:layout_marginHorizontal="@dimen/margin_layout"
           android:hint="@string/hint_password"
           android:textAppearance="@style/TextAppearance.Kelilink.Body1"
           android:inputType="textPassword"
           android:paddingHorizontal="@dimen/margin_component_more"
           app:layout_constraintTop_toBottomOf="@+id/l_et_email"
           tools:ignore="TextContrastCheck"/>

       <TextView
           android:id="@+id/l_btn_forgot_password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="@style/TextAppearance.Kelilink.Body2"
           android:text="@string/content_forget_password"
           android:textColor="@color/orange"
           android:textStyle="bold"
           app:layout_constraintTop_toBottomOf="@id/l_et_password"
           app:layout_constraintEnd_toEndOf="@id/l_et_password"
           android:layout_marginTop="@dimen/margin_component"/>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/l_btn_login"
           style="@style/Widget.Kelilink.Button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_layout_extra"
           android:layout_marginHorizontal="@dimen/margin_layout"
           android:text="@string/btn_login"
           app:layout_constraintTop_toBottomOf="@+id/l_btn_forgot_password"
           tools:ignore="TextContrastCheck"
           tools:layout_editor_absoluteX="16dp" />

       <LinearLayout
           android:id="@+id/l_layout_dont_have_account"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_component_more"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/l_btn_login">

           <TextView
               style="@style/TextAppearance.Kelilink.Body2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/content_dont_have_count" />

           <TextView
               android:id="@+id/l_btn_register"
               style="@style/TextAppearance.Kelilink.Body2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/margin_component_small"
               android:text="@string/btn_register"
               android:textColor="@color/orange"
               android:textStyle="bold" />

       </LinearLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>