<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.profile.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/p_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <include
               android:id="@+id/p_layout_profile"
               layout="@layout/content_profile_info"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:visibility="invisible"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/p_tv_title_account"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/margin_layout"
               android:text="@string/title_account"
               android:textAppearance="@style/TextAppearance.Kelilink.Subtitle2"
               android:textColor="@color/orange"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="@dimen/margin_layout_more"
               app:layout_constraintTop_toBottomOf="@+id/p_layout_profile"/>

           <TextView
               android:id="@+id/p_btn_edit_profile"
               android:layout_width="match_parent"
               android:layout_marginTop="@dimen/margin_component"
               android:textAppearance="@style/TextAppearance.Kelilink.Body1"
               android:text="@string/menu_edit_profile"
               android:gravity="center_vertical"
               android:paddingHorizontal="@dimen/margin_layout"
               android:layout_height="@dimen/button_menu"
               app:layout_constraintTop_toBottomOf="@+id/p_tv_title_account"
               app:drawableEndCompat="@drawable/ic_next" />

           <TextView
               android:id="@+id/p_btn_edit_password"
               android:layout_width="match_parent"
               android:textAppearance="@style/TextAppearance.Kelilink.Body1"
               android:text="@string/menu_edit_password"
               android:gravity="center_vertical"
               android:paddingHorizontal="@dimen/margin_layout"
               android:layout_height="@dimen/button_menu"
               app:layout_constraintTop_toBottomOf="@+id/p_btn_edit_profile"
               app:drawableEndCompat="@drawable/ic_next" />

           <TextView
               android:id="@+id/p_tv_title_other"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/margin_layout"
               android:text="@string/title_other"
               android:textAppearance="@style/TextAppearance.Kelilink.Subtitle2"
               android:textColor="@color/orange"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/p_btn_edit_password"
               android:layout_marginTop="@dimen/margin_layout" />

           <TextView
               android:id="@+id/p_btn_report"
               android:layout_width="match_parent"
               android:layout_marginTop="@dimen/margin_component"
               android:textAppearance="@style/TextAppearance.Kelilink.Body1"
               android:text="@string/menu_report"
               android:gravity="center_vertical"
               android:paddingHorizontal="@dimen/margin_layout"
               android:layout_height="@dimen/button_menu"
               android:drawablePadding="@dimen/margin_component_small"
               app:layout_constraintTop_toBottomOf="@+id/p_tv_title_other"
               app:drawableStartCompat="@drawable/ic_report" />

           <TextView
               android:id="@+id/p_btn_logout"
               android:layout_width="match_parent"
               android:layout_height="@dimen/button_menu"
               android:drawablePadding="@dimen/margin_component_small"
               android:gravity="center_vertical"
               android:paddingHorizontal="@dimen/margin_layout"
               android:text="@string/menu_logout"
               android:textAppearance="@style/TextAppearance.Kelilink.Body1"
               android:textColor="@color/red"
               app:drawableStartCompat="@drawable/ic_exit"
               app:drawableTint="@color/red"
               app:layout_constraintTop_toBottomOf="@+id/p_btn_report"/>

           <include
               android:id="@+id/p_loading"
               layout="@layout/placeholder_profile"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>