<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.order.store.note.NoteFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/n_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/n_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/n_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_component_small"
        android:layout_marginTop="@dimen/margin_component"
        android:background="@drawable/indicator"
        app:layout_constraintEnd_toStartOf="@+id/n_guideline2"
        app:layout_constraintStart_toEndOf="@id/n_guideline1"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/n_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_note"
        android:layout_marginTop="@dimen/margin_layout"
        android:textAppearance="@style/TextAppearance.Kelilink.Heading6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageView
        android:id="@+id/n_dots1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_component"
        android:contentDescription="@string/content_description_line"
        android:src="@drawable/dots"
        app:layout_constraintTop_toBottomOf="@id/n_tv_title"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/n_et_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_view_store"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/hint_note"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:paddingVertical="@dimen/margin_component"
        android:textAppearance="@style/TextAppearance.Kelilink.Body1"
        app:layout_constraintTop_toBottomOf="@id/n_dots1" />

    <ImageView
        android:id="@+id/n_dots2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_component"
        android:contentDescription="@string/content_description_line"
        android:src="@drawable/dots"
        app:layout_constraintTop_toBottomOf="@id/n_et_note"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/n_btn_save"
        style="@style/Widget.Kelilink.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_more"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/image_view_store"
        app:layout_constraintStart_toStartOf="@+id/n_guideline3"
        app:layout_constraintTop_toBottomOf="@+id/n_dots2" />

</androidx.constraintlayout.widget.ConstraintLayout>