<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.transaction.invoice.detail.DetailInvoiceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/di_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <include
            android:id="@+id/di_content"
            layout="@layout/content_detail_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BottomSheetTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/di_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/di_tv_title_total"
            style="@style/TextAppearance.Kelilink.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_total"
            android:layout_marginStart="@dimen/margin_layout"
            app:layout_constraintBottom_toBottomOf="@+id/di_tv_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/di_tv_total" />


        <TextView
            android:id="@+id/di_tv_total"
            style="@style/TextAppearance.Kelilink.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_layout"
            app:layout_constraintBottom_toTopOf="@id/di_tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/di_view" />

        <TextView
            android:id="@+id/di_tv_title_time"
            style="@style/TextAppearance.Kelilink.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_time"
            android:layout_marginStart="@dimen/margin_layout"
            app:layout_constraintBottom_toBottomOf="@+id/di_tv_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/di_tv_time" />


        <TextView
            android:id="@+id/di_tv_time"
            style="@style/TextAppearance.Kelilink.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_layout"
            app:layout_constraintBottom_toTopOf="@id/di_tv_id"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/di_tv_title_id"
            style="@style/TextAppearance.Kelilink.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_order_id"
            android:layout_marginStart="@dimen/margin_layout"
            app:layout_constraintBottom_toBottomOf="@+id/di_tv_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/di_tv_id" />


        <TextView
            android:id="@+id/di_tv_id"
            style="@style/TextAppearance.Kelilink.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>